# CDebug

./: .gitignore  CMakeLists.txt  README.md
cmake/: CDebugConfig.cmake  CDebugConfigVersion.cmake
include/CDebug/: cdebug.h  cdebug_args_t.h  cdebug_errno_t.h  cdebug_export.h
src/: cdebug_afx.h  cdebug_args.c  cdebug_get_last.c  cdebug_last.c  cdebug_last.h  cdebug_print.c  cdebug_set_last.c
